--- a/form-en.html
+++ b/form-en.html
@@ -78,13 +78,13 @@
     </div>
 
     <form action="#" method="post">
-        <label for="name">Name</label>
+        <label for="name">Patient's name</label>
         <input type="text" id="name" name="name" placeholder="Enter your patient's name" required>
 
-        <label for="age">Age</label>
+        <label for="age">Patient's age</label>
         <input type="number" id="age" name="age" placeholder="Enter your patient's age" required min="1" max="100">
 
-        <label for="message">Patient's Problem</label>
+        <label for="message">Patient's problem</label>
         <textarea id="message" name="message" rows="4" placeholder="Enter your patient's problem" required></textarea>
 
         <button type="submit">Submit</button>
