--- a/form-ckb.html
+++ b/form-ckb.html
@@ -72,7 +72,7 @@
 </head>
 <body>
     <div class="language-selector">
-        <a href="form-en.html">English</a>
+        <a href="index.html">English</a>
         <a href="form-ar.html">العربية</a>
         <a href="form-ckb.html">کوردی</a>
     </div>
